# roboGaurdian

./: .gitignore  AUDIO_FIXES_SUMMARY.md  AUDIO_NOISE_SOLUTION.md  BLUETOOTH_AUDIO_FIX.md  BLUETOOTH_FIX.md  CAMERA_FIX_GUIDE.md  DIRECT_ESP32_TEST.md  GUI_IMPROVEMENTS_SUMMARY.md  LATENCY_OPTIMIZATION_GUIDE.md  LOW_LATENCY_OPTIMIZATION.md  NGROK_ALTERNATIVES.md  OPTIMIZATION_SUMMARY.md  PROJECT_STATUS.md  RASPBERRY_PI_SETUP.md  README.md  REMINDER_FIX_SUMMARY.md  REMOTE_AI_DEPLOYMENT.md  SETUP_AND_USAGE.md  SPEED_CONTROL_OPTIMIZATION.md  SPEED_CONTROL_UPDATE.md  TKINTER_FIX_GUIDE.md  TTS_FIX_SUMMARY.md  TTS_NO_SPEECH_ENGINE_FIX.md  UART Motor control.ino  UART_SETUP_GUIDE.md  USB_AUDIO_SOLUTION_GUIDE.md  WGET_COMMANDS.md  WHAT_TO_RUN_WHERE.md  _old.py  api_only_supervisor.py  audio_chat_test.html  bt_diagnostic.py  camera_diagnostic.py  debug_bluetooth_audio.py  debug_pi_audio.py  debug_routes.py  diagnose_audio_chat.py  diagnose_audio_noise.py  download_pi_server.sh  download_pi_windows.ps1  (+52 more)
backup_removed_files/: DEPLOYMENT_GUIDE.md  DOWNLOAD_COMMANDS.md  ESP32_BT_CAR_Enhanced.ino  ESP32_FIX_GUIDE.md  REMOTE_ACCESS_GUIDE.md  REMOTE_CONTROL_GUIDE.md  (+23 more)
raspi-chatbot/: README.md  pi_voice_chatbot_single.py  pyproject.toml  requirements.txt  setup_pi_chatbot.sh
raspi-chatbot/config/: settings.example.env
raspi-chatbot/src/: main.py  pi_voice_chatbot.py
raspi-chatbot/src/audio/: __init__.py  bluetooth_speaker.py
raspi-chatbot/src/chatbot/: convo_manager.py  state_store.py
raspi-chatbot/src/services/: github_model_client.py
raspi-chatbot/tests/: test_chatbot.py
(+42 files in other folders)
